2006-06-20  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/xcalc.hxx,
	* source/ui/xcalc.cxx (disableCellUpdates, enableCellUpdates): added.

	* source/service/service.cxx (solveModel): removed unused using statement.

	* source/ui/solvemodel.cxx (parseConstraints, lcl_isNumeric): disabling and
	enabling of cell updates before and after the model transform.  Slightly better
	way of detecting a numerical String whose value is 0.

2006-06-15  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* prj/build.lst: added missing dependencies to fix build failure.

	* prj/d.lst: fixed typos that prevented resource files from being delivered.

	* source/inc/lpbuilder.hxx:
	* source/ui/lpbuilder.cxx (ConstraintAddress): encapsulated data members, and
	added some new members to handle a numerical RHS value directly given in the
	constraint dialog, instead of requiring it to be always a cell address.

	* source/inc/unoglobal.hxx (getMessage): removed virtual keyword.

	* source/service/service.cxx (solve): added try-catch block to prevent unlikely
	crash.

	* source/ui/solvemodel.cxx: made CellGeometriesDiffer exception class localizable.
	properly handle cases where the RHS value is numerical.

2006-06-13  Michael Meeks  <michael.meeks@novell.com>

	* source/inc/unoglobal.hxx: define ascii_i18n to
	help markup.

	* source/service/service.cxx (setLocale, getLocale),
	* source/inc/solver.hxx: impl. XLocalizable

	* source/service/service.cxx (initLocale, getResMgr): impl.

2006-06-14  Kohei Yoshida  <kohei.yoshida@gmail.com>
	
	* source/inc/unoglobal.hxx:
	* source/ui/unoglobal.cxx: added localizable RuntimError class.

	* source/inc/numeric/lpmodel.hxx:
	* source/numeric/lpmodel.cxx: added two new methods that return the number of 
	constraints and decision variables, respectively.  Renamed getEqualityByRowId
	to getEquality for ease of typing.

	* source/numeric/lpsimplex.cxx:
	* source/numeric/lpuno.cxx: affected by renaming of lp::Modell::getEquality().
