@@ -3,7 +3,30 @@
 
 #define SCSOLVER_RES_START 1000
 
-#define SCSOLVER_STR_FOO (SCSOLVER_RES_START)
-#define SCSOLVER_STR_BAA (SCSOLVER_RES_START+1)
+#define SCSOLVER_STR_MAINDLG_TITLE                (SCSOLVER_RES_START)
+#define SCSOLVER_STR_DEFINE_MODEL                 (SCSOLVER_RES_START+1)
+#define SCSOLVER_STR_SET_TARGET_CELL              (SCSOLVER_RES_START+2)
+#define SCSOLVER_STR_GOAL                         (SCSOLVER_RES_START+3)
+#define SCSOLVER_STR_MAXIMIZE                     (SCSOLVER_RES_START+4)
+#define SCSOLVER_STR_MINIMIZE                     (SCSOLVER_RES_START+5)
+#define SCSOLVER_STR_DECISIONVAR_CELLS            (SCSOLVER_RES_START+6)
+#define SCSOLVER_STR_CONSTRAINT_SEP               (SCSOLVER_RES_START+7)
+#define SCSOLVER_STR_CONSTRAINTDLG_TITLE          (SCSOLVER_RES_START+8)
+#define SCSOLVER_STR_CELL_REFERENCE               (SCSOLVER_RES_START+9)
+#define SCSOLVER_STR_CONSTRAINT                   (SCSOLVER_RES_START+10)
+#define SCSOLVER_STR_BTN_OK                       (SCSOLVER_RES_START+11)
+#define SCSOLVER_STR_BTN_CANCEL                   (SCSOLVER_RES_START+12)
+#define SCSOLVER_STR_MSG_REF_CON_RANGE_MISMATCH   (SCSOLVER_RES_START+13)
+#define SCSOLVER_STR_BTN_ADD                      (SCSOLVER_RES_START+14)
+#define SCSOLVER_STR_BTN_CHANGE                   (SCSOLVER_RES_START+15)
+#define SCSOLVER_STR_BTN_DELETE                   (SCSOLVER_RES_START+16)
+#define SCSOLVER_STR_BTN_SOLVE                    (SCSOLVER_RES_START+17)
+#define SCSOLVER_STR_BTN_RESET                    (SCSOLVER_RES_START+18)
+#define SCSOLVER_STR_BTN_OPTIONS                  (SCSOLVER_RES_START+19)
+#define SCSOLVER_STR_BTN_SAVE_MODEL               (SCSOLVER_RES_START+20)
+#define SCSOLVER_STR_BTN_LOAD_MODEL               (SCSOLVER_RES_START+21)
+#define SCSOLVER_STR_BTN_CLOSE                    (SCSOLVER_RES_START+22)
+#define SCSOLVER_STR_MSG_SOLUTION_NOT_FOUND       (SCSOLVER_RES_START+23)
+#define SCSOLVER_STR_MSG_SOLUTION_FOUND           (SCSOLVER_RES_START+24)
 
 #endif
