@@ -1,12 +1,152 @@
 #include "scsolver.hrc"
 
-String SCSOLVER_STR_FOO
+String SCSOLVER_STR_MAINDLG_TITLE
 {
 	Text [ de ] = "SicherFoo" ;
-	Text [ en-US ] = "Foo";
+	Text [ en-US ] = "Optimization Solver";
 };
-String SCSOLVER_STR_BAA
+
+String SCSOLVER_STR_DEFINE_MODEL
 {
 	Text [ de ] = "GeDeutschenBaa" ;
-	Text [ en-US ] = "Baa";
+	Text [ en-US ] = "Define Model";
+};
+
+String SCSOLVER_STR_SET_TARGET_CELL
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Set target cell";
+};
+
+String SCSOLVER_STR_GOAL
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Goal";
+};
+
+String SCSOLVER_STR_MAXIMIZE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Mazimize";
+};
+
+String SCSOLVER_STR_MINIMIZE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Minimize";
+};
+
+String SCSOLVER_STR_DECISIONVAR_CELLS
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "By changing cells";
+};
+
+String SCSOLVER_STR_CONSTRAINT_SEP
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Subject to the constraints";
+};
+
+String SCSOLVER_STR_CONSTRAINTDLG_TITLE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Constraint";
+};
+
+String SCSOLVER_STR_CELL_REFERENCE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Cell Reference";
+};
+
+String SCSOLVER_STR_CONSTRAINT
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Constraint";
+};
+
+
+String SCSOLVER_STR_BTN_OK
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "OK";
+};
+
+String SCSOLVER_STR_BTN_CANCEL
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Cancel";
+};
+
+String SCSOLVER_STR_MSG_REF_CON_RANGE_MISMATCH
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "The reference and constraint ranges do not match.";
+};
+
+String SCSOLVER_STR_BTN_ADD
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Add";
+};
+
+String SCSOLVER_STR_BTN_CHANGE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Change";
+};
+
+String SCSOLVER_STR_BTN_DELETE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Delete";
+};
+
+String SCSOLVER_STR_BTN_SOLVE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Solve";
+};
+
+String SCSOLVER_STR_BTN_RESET
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Reset";
+};
+
+String SCSOLVER_STR_BTN_OPTIONS
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Options";
+};
+
+String SCSOLVER_STR_BTN_SAVE_MODEL
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Save";
+};
+
+String SCSOLVER_STR_BTN_LOAD_MODEL
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Load";
+};
+
+String SCSOLVER_STR_BTN_CLOSE
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Close";
+};
+
+String SCSOLVER_STR_MSG_SOLUTION_NOT_FOUND
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Solution could not be found";
+};
+
+String SCSOLVER_STR_MSG_SOLUTION_FOUND
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Solution found";
 };
