@@ -1,3 +1,15 @@
+2006-06-24  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/inc/solver.hxx,
+	* source/service/service.cxx,
+	* source/inc/basedlg.hxx,
+	* source/ui/basedlg.cxx: changed return type of getResMgr(), and added 
+	getResStr() method for easy retrieval of localized string.
+
+	* source/ui/dialog.cxx,
+	* source/ui/scsolver.hrc,
+	* source/ui/scsolver.src: localized dialog strings.
+
 2006-06-20  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* source/inc/xcalc.hxx,
